--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
     <uses-feature android:name="android.hardware.usb.accessory" />
     <uses-feature android:name="android.hardware.usb.host" />
+    <uses-permission android:name="android.permission.BLUETOOTH"  android:required="false" />
 
     <application
         android:allowBackup="true"
@@ -28,7 +28,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Forms.Splash">
+        <activity android:name=".forms.Splash">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,55 +37,63 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Forms.frmMain"
+            android:name=".forms.frmMain"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize"/>
         <activity
-            android:name=".Forms.frmSync"
+            android:name=".forms.frmSync"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.frmDispatch"
+            android:name=".forms.frmDispatch"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.frmInspector"
+            android:name=".forms.frmInspector"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.frmPartial"
+            android:name=".forms.frmPartial"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.frmIngress"
+            android:name=".forms.frmIngress"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.ActionBar"
+            android:name=".forms.ActionBar"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.frmTicket"
+            android:name=".forms.frmTicket"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".Forms.frmArrival"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
-
-        <activity
-            android:name=".Forms.frmInspectionfromTerminal"
+            android:name=".forms.frmArrival"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".Forms.frmReverse"
+            android:name=".forms.frmInspectionfromTerminal"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".Forms.frmExpense"
+            android:name=".forms.frmReverse"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name="com.transport.organelles.transport_.classforms.DeviceListActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value="ACTIVITY STARTED FROM?RETURNING TO" />
+        </activity>
+        <activity
+            android:name=".forms.frmExpense"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
 
