update in ticket, reverse, partial

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -75,7 +75,7 @@
             android:screenOrientation="portrait" />
 
         <activity
-            android:name=".forms.frmInspectionfromTerminal"
+            android:name=".forms.frmDispatchfromTerminal"
             android:configChanges="orientation"
             android:screenOrientation="portrait" />
 
