--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,10 @@ android {
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "com.transport.organelles.transport_"
-        minSdkVersion 15
-        targetSdkVersion 25
+//        minSdkVersion 15
+//        targetSdkVersion 25
+        minSdkVersion 11
+        targetSdkVersion 19
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
